--- a/{{ cookiecutter.repo_name }}/.pre-commit-config.yaml
+++ b/{{ cookiecutter.repo_name }}/.pre-commit-config.yaml
@@ -21,24 +21,24 @@ repos:
         #         ^*.pkl
         #     )
 
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
+    hooks:
+    -   id: flake8
+        additional_dependencies:
+            - radon
+            - flake8-docstrings
+
 -   repo: https://github.com/grantjenks/blue
     rev: v0.9.1
     hooks:
     -   id: blue
 
-# -   repo: https://github.com/pre-commit/mirrors-mypy
-#     rev: "v1.9.0"
-#     hooks:
-#     -   id: mypy
-#         args: [--ignore-missing-imports, --no-strict-optional]
-
-# -   repo: https://github.com/PyCQA/flake8
-#     rev: 7.0.0
-#     hooks:
-#     -   id: flake8
-#         additional_dependencies:
-#             - radon
-#             - flake8-docstrings
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.9.0"
+    hooks:
+    -   id: mypy
+        args: [--ignore-missing-imports, --no-strict-optional]
 
 # -   repo:
 #     rev:
